App did not update

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,30 @@ gallery.xml
 project.lock.json
 Samples/WebSocket/server/WebSocketSampleScriptSettings
 Samples/StreamSocket/**/StreamSocketSampleScriptSettings.xml
+bin/x86/Debug/App.xbf
+bin/x86/Debug/AppX/App.xbf
+bin/x86/Debug/AppX/entrypoint/FiaMedKnuff.exe
+bin/x86/Debug/AppX/FiaMedKnuff.xr.xml
+bin/x86/Debug/AppX/MainPage.xbf
+bin/x86/Debug/AppX/resources.pri
+bin/x86/Debug/AppX/vs.appxrecipe
+bin/x86/Debug/FiaMedKnuff.build.appxrecipe
+bin/x86/Debug/FiaMedKnuff.exe
+bin/x86/Debug/FiaMedKnuff.pdb
+bin/x86/Debug/FiaMedKnuff.xr.xml
+bin/x86/Debug/MainPage.xbf
+bin/x86/Debug/resources.pri
+obj/x86/Debug/App.xbf
+obj/x86/Debug/FiaMedKnuff.csproj.CoreCompileInputs.cache
+obj/x86/Debug/FiaMedKnuff.csproj.FileListAbsolute.txt
+obj/x86/Debug/FiaMedKnuff.exe
+obj/x86/Debug/FiaMedKnuff.pdb
+obj/x86/Debug/FiaMedKnuff.xr.xml
+obj/x86/Debug/filtered.layout.resfiles
+obj/x86/Debug/filtered.layout.resfiles.intermediate
+obj/x86/Debug/intermediatexaml/FiaMedKnuff.exe
+obj/x86/Debug/intermediatexaml/FiaMedKnuff.pdb
+obj/x86/Debug/MainPage.xbf
+obj/x86/Debug/unfiltered.layout.resfiles
+obj/x86/Debug/unfiltered.layout.resfiles.intermediate
+obj/x86/Debug/XamlSaveStateFile.xml
