add csproj to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@ obj/x86/Debug/MainPage.xbf
 obj/x86/Debug/unfiltered.layout.resfiles
 obj/x86/Debug/unfiltered.layout.resfiles.intermediate
 obj/x86/Debug/XamlSaveStateFile.xml
+/FiaMedKnuff.csproj
