--- a/FiaMedKnuff.csproj
+++ b/FiaMedKnuff.csproj
@@ -130,8 +130,8 @@
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveLoadManager.cs" />
-    <Compile Include="UserControls\dice.xaml.cs">
-      <DependentUpon>dice.xaml</DependentUpon>
+    <Compile Include="UserControls\Dice.xaml.cs">
+      <DependentUpon>Dice.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\HighScore_Popup.xaml.cs">
       <DependentUpon>HighScore_Popup.xaml</DependentUpon>
@@ -160,7 +160,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControls\dice.xaml">
+    <Page Include="UserControls\Dice.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
